--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
     "email": "xuluxi1987@163.com"
   },
   "dependencies": {
+    "chokidar": "^1.6.1",
     "koa": "^1.2.4",
     "koa-router": "^5.4.0",
     "koa-static": "^2.1.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
   "scripts": {
     "dev": "node index",
-    "eslint": "eslint .",
+    "eslint": "eslint ."
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^3.19.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
