--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "koa-static": "^2.1.0",
     "lodash": "^4.17.4",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1"
   },
   "scripts": {
     "dev": "node index",
@@ -23,13 +25,20 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
+    "extract-text-webpack-plugin": "^2.1.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-sass": "^3.1.0",
+    "sass-loader": "^6.0.6",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.18.2",
     "webpack": "^2.4.1"
   }
 }
